Mon Mar 19 18:43:06 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed the mode printing on the user interface on joining.
	  Affected file silc/client_ops.c.

	* Implemented the UMODE command and user modes in general to the
	  client library and to the user interface.

	* Implemented the UMODE command to the server.

	* The server now sends UNKNOWN_COMMAND error status if client sends
	  unknown command.  Affected file silcd/command.c.

	* All server commands now handle the command identifier the right
	  way when sending the command reply to the client.  The client can
	  use to identify the command replies with the identifier.

Mon Mar 19 16:13:07 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added silc_server_get_client_route to resolve the route to
	  the client indicated by the client ID.  Affected file is
	  silcd/server.[ch].

	* Added silc_server_relay_packet as general function to relay
	  packet to arbitrary destination.  This deprecates functions
	  like _send_private_message_key, _relay_notify etc.  Affected
	  file is silcd/packet_send.[ch].

	  Removed silc_server_send_key_agreement, 
	  silc_server_send_private_message_key and
	  silc_server_packet_relay_notify functions from the file
	  silcd/packet_send.[ch].

	* Updated TODO.

	* Implemented the SILC_NOTIFY_TYPE_KILLED notify handling in the
	  server.  Affected file silcd/packet_receive.[ch].

	* Implemented the KILL command to the client.  Implemented the
	  SILC_NOTIFY_TYPE_KILLED notify handling in the client library.
	  Affected files lib/silcclient/command[_reply].c and
	  lib/silcclient/client_notify.c.  Implemented the KILL notify
	  printing in the user inteface.

	* Fixed a lot silc_parse_nick memory leaks from the client
	  library in the file lib/silcclient/command.c.

	* Changed the silc_server_send_notify_on_channels's `sender'
	  argument from SilcSocketConnection to SilcClientEntry to 
	  check the sender as entry and not as connection object and not